<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.esime.nutrisimios_bd.ui.Profile.Profile"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_Profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.esime.nutrisimios_bd.ui.Progress.Progress"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_Progress" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.esime.nutrisimios_bd.ui.Plan.Plan"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_plan" />
</navigation>